--- a/Client/src/Componentes/productos/productos.module.css
+++ b/Client/src/Componentes/productos/productos.module.css
@@ -1,8 +1,9 @@
 .contenedor{
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    margin-left: 900px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 8px;
+    grid-row-gap: 8px;
 }
 .cards{
     background-color: rgb(20, 18, 18);
