--- a/Client/src/Componentes/productos/productos.module.css
+++ b/Client/src/Componentes/productos/productos.module.css
@@ -1,8 +1,9 @@
 .contenedor{
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    margin-left: 900px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 8px;
+    grid-row-gap: 8px;
 }
 .cards{
     background-color: rgb(20, 18, 18);
@@ -13,6 +14,8 @@
     border-radius: 10px;
     cursor: pointer;
     margin: 10px;
+    justify-content: center;
+    text-align: center;
 }
 .contenedorPP{
     display: flex;
@@ -23,4 +26,5 @@
 .imagen{
     width: 200px;
     height: 200px;
+    
 }
