--- a/Client/src/Componentes/sideBar/sideBar.module.css
+++ b/Client/src/Componentes/sideBar/sideBar.module.css
@@ -34,7 +34,7 @@
     width: 250px;
     line-height: 1;
 }
-.contenedor > h4{
+.NavLink{
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -45,6 +45,7 @@
     border-radius: 8px;
     cursor: pointer;
     color: var(--letraBlanca--);
+    text-decoration: none;
 }
 .contenedor > h5{
     display: flex;
@@ -56,7 +57,7 @@
     width: 250px;
     color: #8b8b8b;
 }
-.contenedor > h4:hover{
+.NavLink:hover{
     background-color: #4b4b4b;
 }
 
@@ -68,18 +69,6 @@
     width: 250px;
     line-height: 1;
 }
-.contenedorUsuarios > h4{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 5px;
-    padding: 5px;
-    height: 30px;
-    width: 225px;
-    border-radius: 8px;
-    cursor: pointer;
-    color: var(--letraBlanca--);
-}
 .contenedorUsuarios > h5{
     display: flex;
     justify-content: center;
@@ -89,9 +78,6 @@
     height: 30px;
     width: 250px;
     color: #8b8b8b;
-}
-.contenedorUsuarios > h4:hover{
-    background-color: #4b4b4b;
 }
 
 .botonCerrar{
