--- a/Client/src/Componentes/productos/productos.module.css
+++ b/Client/src/Componentes/productos/productos.module.css
@@ -6,22 +6,37 @@
     grid-row-gap: 8px;
 }
 .cards{
-    background-color: rgb(20, 18, 18);
+    background-color: rgb(5, 3, 3);
     display: flex;
     flex-direction: row;
     align-items: center;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 10px;
     cursor: pointer;
-    margin: 10px;
+    margin: 9px;
 }
-.contenedorPP{
+.imagen{
+    width: 200px;
+    height:200px;
+}
+.contenedorLetras{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 10px;
+    color: aliceblue;
+    margin-left: 50px;
 }
-.imagen{
-    width: 200px;
-    height: 200px;
+.tittle{
+    color: aliceblue;
+    background-color: rgb(5, 3, 3);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 9px;
+    width: 27%;
+    margin-left: 35%;
 }
