--- a/Client/src/Componentes/productos/productos.module.css
+++ b/Client/src/Componentes/productos/productos.module.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(37, 37, 37);
     border-radius: 10px;
     cursor: pointer;
     margin: 9px;
@@ -21,6 +21,7 @@
 .imagen{
     width: 200px;
     height:200px;
+    border-radius: 10px;
 }
 .contenedorLetras{
     display: flex;
