--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,10 +1,10 @@
 
-.html, body{
+.html, body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  background-color: #010101;
+  background-color: #070707;
   overflow-x: hidden;
 
  :root {
@@ -12,13 +12,10 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #181818;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  }
 }
