--- a/Client/src/Componentes/Views/General/Componente_General/General.module.css
+++ b/Client/src/Componentes/Views/General/Componente_General/General.module.css
@@ -51,14 +51,10 @@
  }
 
  .ContenedorProductos {
-    height: 100%;
-    width:25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    background-color: #181818;
+   display: block;
+   width: 20%;
+   height: 100%;
+   text-align: center;
  }
 
  .ContenedorBotones {
