--- a/Client/src/Componentes/Views/General/Productos_F_Stock/Productos_F_Stock.module.css
+++ b/Client/src/Componentes/Views/General/Productos_F_Stock/Productos_F_Stock.module.css
@@ -1,4 +1,7 @@
 .ContenedorProductos {
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     color: white;
+    background-color: #010101;
+    margin-top: 0;
 }
