--- a/Client/src/Componentes/CUENTAUSUARIO/CrearCliente/CrearCliente.module.css
+++ b/Client/src/Componentes/CUENTAUSUARIO/CrearCliente/CrearCliente.module.css
@@ -1,3 +1,48 @@
+.tittle { 
+    text-align: center;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 900;
+}
+
+
+.nombre {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: block;
+    color: rgba(156, 163, 175, 1);
+    margin-bottom: 4px; 
+    margin: 0 auto;
+}
+
+.telefono {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: block;
+    color: rgba(156, 163, 175, 1);
+    margin-bottom: 4px; 
+    margin: 0 auto;
+}
+
+.email {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: block;
+    color: rgba(156, 163, 175, 1);
+    margin-bottom: 4px; 
+    margin: 0 auto;
+}
+
+.msjCreado {
+    color: #ffffff;
+}
+
 .form {
     position: fixed;
     top: 50%;
@@ -10,16 +55,9 @@
     border-radius: 0.75rem;
     background-color: #181818;
     color: #f3f4f6;
-    max-width: 550px; 
-    height: auto; 
+    width: 450px; 
+    height: 450px; 
     padding: 25px; 
-}
-
-.titituloForm {
-    text-align: center;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    font-weight: 900;
 }
 
 .inputGroup {
@@ -33,75 +71,6 @@
     width: 250px; 
     margin: 0 auto;
 }
-
-.inputGropLabel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    display: block;
-    color: rgba(156, 163, 175, 1);
-    margin-bottom: 4px; 
-    margin: 0 auto;
-}
-
-.image {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    max-width: 250px; 
-    margin: 0 auto;
-}
-
-
-@media (max-width: 600px) {
-    .form {
-        width: 90%;
-        max-width: 400px; 
-    }
-}
-
-.buttonDelete {
-    appearance: none;
-    background-color: transparent;
-    border: 0.125em solid #1A1A1A;
-    border-radius: 0.9375em;
-    box-sizing: border-box;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: 600;
-    margin: 0;
-    min-height: 3.75em;
-    min-width: 0;
-    outline: none;
-    text-align: center;
-    text-decoration: none;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    will-change: transform;
-}
-
-.buttonDelete:disabled {
-    pointer-events: none;
-   }
-   
-.buttonDelete:hover {
-    color: #882c9b;
-    background-color: #1A1A1A;
-    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-    transform: translateY(-2px);
-   }
-   
-.buttonDelete:active {
-    box-shadow: none;
-    transform: translateY(0);
-   }
 
 .buttonCreate {
     appearance: none;
@@ -130,28 +99,21 @@
 
 .buttonCreate:disabled {
     pointer-events: none;
-   }
+}
    
 .buttonCreate:hover {
     color: #45b545;
     background-color: #1A1A1A;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
-   }
+}
    
 .buttonCreate:active {
     box-shadow: none;
     transform: translateY(0);
-   }
+}
 
-   .inputGropLabel {
-    display: inline-block;
-    margin-bottom: 10px;
-    font-weight: bold;
-  }
-
-.uploadButton {
-    padding-top: 15px;
+.volverClientes{
     appearance: none;
     background-color: transparent;
     border: 0.125em solid #1A1A1A;
@@ -162,7 +124,6 @@
     display: inline-block;
     font-size: 15px;
     font-weight: 600;
-    line-height: normal;
     margin: 0;
     min-height: 3.75em;
     min-width: 0;
@@ -174,37 +135,20 @@
     -webkit-user-select: none;
     touch-action: manipulation;
     will-change: transform;
-  }
-.uploadButton:disabled {
+}
+
+.volverClientes:disabled {
     pointer-events: none;
-   }
-   
-.uploadButton:hover {
-    color: #45b545;
+}
+
+.volverClientes:hover {
+    color: #882c9b;
     background-color: #1A1A1A;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
-   }
+}
    
-.uploadButton:active {
+.volverClientes:active {
     box-shadow: none;
     transform: translateY(0);
-   }
-
-
-.customFileInput {
-    display: none;
-  }
-
-.ImageTittle {
-    margin-top: 0.25rem;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    width: 250px; 
-    margin: 0 auto;
-}
-
-.previewImage {
-    width: 350px;
-    height: 350px;
 }
