--- a/Client/src/Componentes/sideBar/sideBar.module.css
+++ b/Client/src/Componentes/sideBar/sideBar.module.css
@@ -10,14 +10,14 @@
 .logoAgilix{
     position: relative;
     top: 10px;
-    color: #4cbb17;
+    color: #45b545;
     font-size: 40px;
     transition: all 200ms linear;
 }
 .logoAgilixReducido{
     position: fixed;
     top: 40px;
-    color: #4cbb17;
+    color: #45b545;
     font-size: 40px;
     transition: all 200ms linear;
 }
@@ -121,14 +121,13 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    right: -15px;
+    right: 15 px;
     top: 0px;
     cursor: pointer;
-    background-color: #4cbb17;
+    background-color: #45b545;
     color: white;
-    width: 29px;
-    height: 28px;
-    border-radius: 20px;
+    width: 50px;
+    height: 30px;
      
 }
 .botonCerrar:hover{
@@ -140,6 +139,6 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    left: 7px;
+    left: 13px;
 }
 
