--- a/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
+++ b/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
@@ -1,5 +1,6 @@
 .contenedor {
   display: grid;
+  margin-left: 4rem;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 8px;
@@ -35,12 +36,11 @@
   color: aliceblue;
   background-color: rgb(41, 40, 40);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  align-content: center;
   border: 1px solid rgb(49, 49, 49);
   border-radius: 10px;
-  cursor: pointer;
-  margin: 9px;
-  width: 27%;
-  margin-left: 35%;
+  margin-left: 30%;
+  margin-right: 30%;
 }
