--- a/Client/src/Componentes/CUENTAUSUARIO/Clientes/Clientes.module.css
+++ b/Client/src/Componentes/CUENTAUSUARIO/Clientes/Clientes.module.css
@@ -91,3 +91,15 @@
     padding-right: 550px;
 }
 
+.tittle {
+  color: aliceblue;
+  background-color: rgb(41, 40, 40);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  border: 1px solid rgb(49, 49, 49);
+  border-radius: 10px;
+  margin-left: 30%;
+  margin-right: 30%;
+}
