--- a/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
+++ b/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
@@ -7,7 +7,7 @@
   grid-row-gap: 8px;
 }
 .cards {
-  background-color: rgb(44, 44, 44);
+  background-color: #2c2c2c;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -44,3 +44,62 @@
   margin-left: 30%;
   margin-right: 30%;
 }
+
+.selectores {
+  color: white;
+  width: 150px;
+  height: 50px;
+  background-color: #2c2c2c;
+  border-radius: 10px;
+}
+
+.contenedorSelector {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  color: rgb(248, 248, 248);
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.buttonReset {
+  appearance: none;
+  background-color: transparent;
+  border: 0.125em solid #1A1A1A;
+  border-radius: 0.9375em;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 600;
+  margin: 0;
+  min-height: 3.75em;
+  min-width: 0;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+.buttonReset:disabled {
+  pointer-events: none;
+ }
+ 
+ .buttonReset:hover {
+  color: #882c9b;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+ }
+ 
+ .buttonReset:active {
+  box-shadow: none;
+  transform: translateY(0);
+ }
