--- a/Client/src/Componentes/sideBar/sideBar.module.css
+++ b/Client/src/Componentes/sideBar/sideBar.module.css
@@ -9,11 +9,11 @@
 }
 .logoAgilix {
   position: relative;
-  top: 10px;
   color: #45b545;
   font-size: 40px;
   transition: all 200ms linear;
 }
+
 .logoAgilixReducido {
   position: fixed;
   top: 40px;
@@ -21,6 +21,7 @@
   font-size: 40px;
   transition: all 200ms linear;
 }
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -121,13 +122,15 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  right: 15 px;
   top: 0px;
   cursor: pointer;
-  background-color: #45b545;
+  background-color: #3e3e3e;
   color: white;
   width: 50px;
   height: 30px;
+  margin-left: 230px;
+  transition: all 200ms linear;
+
 }
 .botonCerrar:hover {
   background-color: grey;
@@ -139,4 +142,23 @@
   align-items: center;
   position: absolute;
   left: 13px;
+}
+
+.botonAbrir {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0px;
+  cursor: pointer;
+  background-color: #45b545;
+  color: white;
+  width: 50px;
+  height: 30px;
+  transition: all 200ms linear;
+}
+
+
+.iconSideBar {
+padding-left: 15px;
 }
