--- a/Client/src/Componentes/Views/General/Card_Producto_F_Stock/Card_Producto_F_Stock.module.css
+++ b/Client/src/Componentes/Views/General/Card_Producto_F_Stock/Card_Producto_F_Stock.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   width: 91%;
   height: 10rem;
   background-color: #111111;
@@ -13,7 +13,7 @@
 }
 
 .ContenedorImagen {
-  display: flex;
+  display: contents;
   margin: 1rem;
   background-color: #111111;
   object-fit: contain;
@@ -25,8 +25,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: center;
-  text-align: left;
+  align-items: flex-start;
+  /* text-align: left; */
   font-size: 1rem;
 }
 
