--- a/Client/src/Componentes/USUARIOS/AdminUsuario/AdminUsuario.module.css
+++ b/Client/src/Componentes/USUARIOS/AdminUsuario/AdminUsuario.module.css
@@ -1,10 +1,11 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 20px;
-    overflow: hidden;
-    margin-left: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 20px;
+  overflow: hidden;
+  margin-left: 200px;
+  width: 1600px;
   }
   
   .clienteRow {
@@ -69,6 +70,7 @@
     -webkit-user-select: none;
     touch-action: manipulation;
     will-change: transform;
+    margin-left: 1390px;
 }
 
 .CrearCliente:disabled {
