--- a/Client/src/Componentes/sideBar/sideBar.module.css
+++ b/Client/src/Componentes/sideBar/sideBar.module.css
@@ -34,6 +34,7 @@
   align-items: center;
   border-right: #4b4b4b solid 3px;
   transition: all 200ms linear;
+  z-index: 100;
 }
 .sidebarReducido {
   position: fixed;
@@ -48,6 +49,7 @@
   align-items: center;
   border-right: #4b4b4b solid 3px;
   transition: all 200ms linear;
+  z-index: 100;
 }
 
 .contenedor {
