--- a/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
+++ b/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
@@ -2,18 +2,71 @@
     color: white;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: red;
 }
 
 .ContenedorTitulo {
     width: 100%;
     height:10%;
     display: flex;
-    background-color: blue;
     align-items: center;
     justify-content: center;
     font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+.ContenedorProductosYTotal {
+    width: 100%;
+    height: 80%;
+    display: flex;
+}
+
+.ContenedorProductos {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+    overflow-y: scroll;
+    align-items: center;
+    gap: 1rem;
+}
+
+.ContenedorCard {
+    background-color: #181818;
+    width: 80%;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.ContenedorTotal {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Total {
+    font-size: 2rem;
+}
+
+.ContenedorQR {
+    width: 90%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
+
+.imagenQR {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.ContenedorBotones {
 }
