implementación de paginado

--- a/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
+++ b/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
@@ -1,8 +1,8 @@
 .contenedor {
   display: grid;
   margin-left: 4rem;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, fit-content(100%));
+  grid-template-rows: repeat(3, fit-content(100%));
   grid-column-gap: 8px;
   grid-row-gap: 8px;
 }
@@ -110,4 +110,9 @@
   height:40px;
   background-color: #2c2c2c;
   border-radius: 10px;
+ }
+
+ .PaginadoContainer {
+  display: flex;
+  justify-content: center;
  }
