--- a/Client/src/Componentes/PRODUCTO/Vender/Cardproducto/Card.module.css
+++ b/Client/src/Componentes/PRODUCTO/Vender/Cardproducto/Card.module.css
@@ -8,13 +8,24 @@
     
 
 }
+.Contenedorinpunt{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 
 .ContenedorImg {
     width: 20%;
     height: 100%;
-    margin-right:100px ;
-}
 
+}
+.img{
+    width: 250px;
+    height: 250px;
+    border-radius: 8px;
+    margin-left: 40px;
+}
 .ContenedorInfo {
     display: flex;
     flex-direction: row;
@@ -22,7 +33,21 @@
     width: 60%;
     height: 100%;
     font-size: 1rem;
-    margin-left: 150px;
+    margin-left: 50px;
+}
+.input{
+    height: 25px;
+    width: 95px;
+    padding-left: 75px;
+    font-size: 18px;
+    border-radius: 5px;
+    border: 2px solid transparent;
+    transition: border 0.2s;
+    border: 2px solid transparent;
+}
+.input:focus {
+    outline: none;
+    border: 2px solid #45b545;
 }
 
 .ContenedorBotones {
@@ -35,7 +60,7 @@
     
 }
 .ContenedorBotonStock{
-    margin-left: 600px;
+    margin-right: 60px;
    
 }
 
@@ -47,6 +72,15 @@
 
 .btnAgregar {
     border-radius: 10px;
-    margin-left: 1300px;
-   
+    transition: all 200ms linear;
+    border: none;
+    background-color: #45b545;
+    padding: 7px;
+    font-weight: 500;
+    color: white;
+}
+.btnAgregar:hover {
+    transform: scale(1.05);
+    background-color: #4b4b4b;
+    color:white;
 }
