cambios generales antes de hacer la conexion PP con Ventas

--- a/Client/src/Componentes/USUARIOS/ConfigPerfil/ConfigPerfil.module.css
+++ b/Client/src/Componentes/USUARIOS/ConfigPerfil/ConfigPerfil.module.css
@@ -19,7 +19,7 @@
     align-items: center;
     justify-content: start;
     width: 350px;
-    height: 500px;
+    height: 520px;
     border: #4b4b4b solid 3px;
     border-radius: 10px;
     background-color: #000000;
@@ -78,6 +78,7 @@
 }
 .nombreApellido{
     color: white;
+    font-size: 35px;
 }
 .inputsIzquierda{
     position: relative;
