--- a/Client/src/Componentes/CUENTAUSUARIO/Clientes/DetailClientes/DetailClientes.module.css
+++ b/Client/src/Componentes/CUENTAUSUARIO/Clientes/DetailClientes/DetailClientes.module.css
@@ -40,3 +40,21 @@ th {
 tr:nth-of-type(2n){
    background: hsl(0 0% 0%/ 0.125);
 }
+.BotonBack {
+    position: relative;
+    padding-top: 0.5rem;
+    color: white;
+    font-size: 1.3rem;
+    width: 4rem;
+    background-color: #181818;
+    transition: 0.5s;
+    border-radius: 10px;
+    border: none;
+    right: 43%;
+    top:1rem;
+}
+
+.BotonBack:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
