--- a/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
+++ b/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
@@ -15,7 +15,11 @@
     font-size: 2rem;
     margin-bottom: 2rem;
 }
-
+.img{
+    width: 240px;
+    height: 240px;
+    border-radius: 10px;
+}
 .ContenedorProductosYTotal {
     width: 100%;
     height: 80%;
