--- a/Client/src/Componentes/Views/General/Pagos_recibidos/Pagos_recibidos.module.css
+++ b/Client/src/Componentes/Views/General/Pagos_recibidos/Pagos_recibidos.module.css
@@ -1,9 +1,88 @@
-.ContenedorPagos {
+.contenedorPrincipal {
+    color: rgba(255, 255, 255, 0.87);
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px ;
+    align-items: center;
     background-color: #181818;
+    border-radius: 10px;
+    padding-bottom: 1rem;
+}
+
+.h1 {
+    font-size: 2.5rem;
+    font-weight: 800;
+}
+
+/* .tablaVentas{
+    border-collapse: collapse;
+    background-color: #181818;
+    color: rgba(255, 255, 255, 0.87);
+    width: 90%;
+    padding: 1rem;
+    justify-content: center;
+    background-color: greenyellow;
+} */
+
+.caption,
+.th,
+.td {
+    padding: 1rem;
+}
+
+.td {
     color: white;
+    background-color: #181818;
+}
+.tdNombre{
+    color: white;
+    background-color: #181818;
+    text-transform: uppercase;
+}
+
+.tr {
+    border-bottom: 4px solid rgba(128, 128, 128, 0.3);
+    width: 104%;
+}
+
+.lastTr{
+    border-bottom: none;
+}
+
+.caption {
+    background: #181818;
+    text-align: center;
+    background-color: #181818;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: white;
+}
+
+.th {
+    background: #181818;
+    color: white;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+.tr:nth-of-type(2n) {
+    background: hsl(0 0% 0%/ 0.125);
+}
+
+.BotonBack {
+    position: relative;
+    padding-top: 0.5rem;
+    color: white;
+    font-size: 1.3rem;
+    width: 4rem;
+    background-color: #181818;
+    transition: 0.5s;
+    border-radius: 10px;
+    border: none;
+    right: 43%;
+    top: 1rem;
+}
+
+.BotonBack:hover {
+    cursor: pointer;
+    transform: scale(1.1);
 }
