--- a/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
+++ b/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
@@ -5,6 +5,7 @@
   grid-template-rows: repeat(3, fit-content(100%));
   grid-column-gap: 8px;
   grid-row-gap: 8px;
+  
 }
 .cards {
   background-color:#2c2c2c;
@@ -15,24 +16,26 @@
   border-radius: 10px;
   cursor: pointer;
   margin: 9px;
-  width: 500px;
+  width: 485px;
+ 
 }
 .cards:hover {
   transform: scale(1.05);
 }
 .imagen {
-  width: 240px;
-  height: 240px;
+  width: 230px;
+  height: 210px;
   border-radius: 10px;
 }
 
 .contenedorLetras {
-  display: flex;
   flex-direction: column;
-  align-items: center;
   margin: 10px;
   color: rgb(248, 248, 248);
   margin-left: 50px;
+  justify-content: left;
+  text-align: left;
+  margin-bottom: 40px;
 }
 .tittle {
   color: aliceblue;
@@ -106,14 +109,55 @@
   transform: translateY(0);
  }
  .botonEliminar{
-  color: white;
-  width: 90px;
-  height:40px;
-  background-color: #2c2c2c;
-  border-radius: 10px;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 20px;
+  color: rgb(192, 192, 192);
+  margin-left: 180px;
+ border-radius: 30px;
  }
-
+ 
  .PaginadoContainer {
   display: flex;
   justify-content: center;
  }
+ .confirmDialog{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.95); 
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 9999; 
+  width: 300px; 
+  text-align: center;
+ }
+ .confirmDialogP{
+  font-size: 18px;
+  margin-bottom: 20px;
+  color: #333;
+ }
+ .confirmDialogButton{
+  background-color: #4a4a4b;
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 10px;
+ }
+ .confirmDialogButton:hover {
+  background-color: #4e36da;
+}
+.confirmDialogButton:last-child {
+  background-color: #4a4a4b;
+  color: #ffffff;
+}
+
+.confirmDialogButton:last-child:hover {
+  background-color: #bb1414;
+}
