--- a/Client/src/Componentes/sideBar/sideBar.module.css
+++ b/Client/src/Componentes/sideBar/sideBar.module.css
@@ -132,18 +132,18 @@
 
 .botonCerrar {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0px;
-  cursor: pointer;
-  background-color: #3e3e3e;
-  color: white;
-  width: 50px;
-  height: 30px;
-  margin-left: 230px;
-  transition: all 200ms linear;
-  border-radius: 5px;
+justify-content: center;
+align-items: center;
+position: absolute;
+top: 0px;
+cursor: pointer;
+background-color: rgba(32, 32, 32, 0.7); 
+color: white;
+width: 50px;
+height: 30px;
+margin-left: 230px;
+transition: all 200ms linear;
+border-radius: 50%;
 
 }
 .botonCerrar:hover {
