--- a/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
+++ b/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
@@ -1,6 +1,6 @@
 .contenedor {
   display: grid;
-  margin-left: 4rem;
+  margin-left: 10rem;
   grid-template-columns: repeat(3, fit-content(100%));
   grid-template-rows: repeat(3, fit-content(100%));
   grid-column-gap: 8px;
@@ -13,16 +13,13 @@
   align-items: center;
   border: 1px solid rgb(37, 37, 37);
   border-radius: 10px;
-  cursor: pointer;
   margin: 9px;
   width: 500px;
 }
-.cards:hover {
-  transform: scale(1.05);
-}
+
 .imagen {
-  width: 240px;
-  height: 240px;
+  max-width: 240px;
+  max-height: 240px;
   border-radius: 10px;
 }
 .contenedorLetras {
@@ -52,6 +49,7 @@
   height: 50px;
   background-color: #2c2c2c;
   border-radius: 10px;
+  border: none;
 }
 
 .contenedorSelector {
@@ -63,6 +61,7 @@
   color: rgb(248, 248, 248);
   margin-left: 50px;
   margin-right: 50px;
+  gap: 25px;
 }
 
 .buttonReset {
@@ -110,9 +109,20 @@
   height:40px;
   background-color: #2c2c2c;
   border-radius: 10px;
+  border: none;
+  border: 1px solid rgba(100, 100, 100, 0.623);
+  cursor: pointer;
+ }
+
+ .botonEliminar:hover{
+  color:red;
  }
 
  .PaginadoContainer {
   display: flex;
   justify-content: center;
+ }
+
+ .inputGroup {
+  padding-bottom: 150px;
  }
