--- a/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
+++ b/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
@@ -29,6 +29,7 @@
     flex-direction: column;
     word-wrap: break-word;
     overflow-y: scroll;
+    scroll-behavior: smooth;
     align-items: center;
     gap: 1rem;
 }
@@ -38,6 +39,7 @@
     width: 80%;
     padding: 10px;
     border-radius: 10px;
+    padding-bottom: 15px;
 }
 
 .ContenedorTotal {
@@ -68,5 +70,56 @@
     object-fit: contain;
 }
 
-.ContenedorBotones {
+.ButtonSearch {
+    padding-top: 0.5rem;
+    color: white;
+    font-size: 1.3rem;
+    width: 4rem;
+    background-color: #181818;
+    transition: 0.5s;
+    border-radius: 10px;
+    border: none;
 }
+
+.ButtonSearch:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+.SearchCliente {
+    background-color: #181818;
+    color: white;
+    border: none;
+    height: 40px;
+    border-radius: 10px;
+    width: 150px;
+}
+
+.search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    width: 550px;
+    gap: 20px;
+}
+
+.botonEliminar {
+    font-size: 17px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 1px;
+    background-color: #181818;
+    transition: 0.5s;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    border: 1px solid rgba(100, 100, 100, 0.623)
+}
+
+.botonEliminar:hover {
+    cursor: pointer;
+    color: red;
+}
+
