--- a/Client/src/Componentes/Views/General/Card_Producto_F_Stock/Card_Producto_F_Stock.module.css
+++ b/Client/src/Componentes/Views/General/Card_Producto_F_Stock/Card_Producto_F_Stock.module.css
@@ -13,12 +13,9 @@
 }
 
 .ContenedorImagen {
-  display: contents;
-  margin: 1rem;
-  background-color: #111111;
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .ContenedorInfo {
@@ -31,8 +28,8 @@
 }
 
 .Imagen {
-  object-fit: contain;
-  max-width: 160px;
+  max-width: 240px;
+  max-height: 240px;
 }
 
 .p {
