--- a/Client/src/Componentes/login/styles.module.css
+++ b/Client/src/Componentes/login/styles.module.css
@@ -44,9 +44,10 @@
   padding: 5px;
   margin: 5px 0;
   outline: none;
-  border: 1px solid #2c444e;
-  border-radius: 2px;
+  border: 1px solid #3a3a3a;
+  border-radius: 5px;
   font-size: 13px;
+  background-color: #181818;
 }
 
 .btn {
@@ -61,6 +62,12 @@
   outline: none;
   border: none;
   cursor: pointer;
+}
+
+.btn:hover {
+  transform: scale(1.01);
+  color: #181818;
+  background-color: #505050;
 }
 
 .text {
@@ -94,6 +101,12 @@
   align-items: center;
   justify-content: center;
   position: relative;
+}
+
+.google_btn:hover {
+  transform: scale(1.01);
+  color: #43b643;
+  background-color: #505050;
 }
 
 .AgilixTittle {
