--- a/Client/src/Componentes/PRODUCTO/AñadirProducto/AñadirProducto.module.css
+++ b/Client/src/Componentes/PRODUCTO/AñadirProducto/AñadirProducto.module.css
@@ -10,7 +10,7 @@
   border-radius: 0.75rem;
   background-color: #181818;
   color: #f3f4f6;
-  width: 550px;
+  max-width: 550px;
   height: auto;
   padding: 25px;
 }
@@ -20,7 +20,6 @@
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 900;
-  color: #45b545;
 }
 
 .inputGroup {
@@ -33,9 +32,6 @@
   line-height: 1.25rem;
   width: 250px;
   margin: 0 auto;
-  background-color: #696969;
-  border: 1px solid rgb(49, 49, 49);
-  color: white;
 }
 
 .inputGropLabel {
@@ -44,7 +40,7 @@
   align-items: center;
   justify-content: center;
   display: block;
-  color: rgb(255, 255, 255);
+  color: rgba(156, 163, 175, 1);
   margin-bottom: 4px;
   margin: 0 auto;
 }
@@ -88,7 +84,6 @@
   -webkit-user-select: none;
   touch-action: manipulation;
   will-change: transform;
-  border: 1px solid rgb(49, 49, 49);
 }
 
 .buttonDelete:disabled {
@@ -130,7 +125,6 @@
   -webkit-user-select: none;
   touch-action: manipulation;
   will-change: transform;
-  border: 1px solid rgb(49, 49, 49);
 }
 
 .buttonCreate:disabled {
@@ -179,7 +173,6 @@
   -webkit-user-select: none;
   touch-action: manipulation;
   will-change: transform;
-  border: 1px solid rgb(49, 49, 49);
 }
 .uploadButton:disabled {
   pointer-events: none;
@@ -212,17 +205,4 @@
 .previewImage {
   width: 350px;
   height: 350px;
-}
-
-.tittle {
-  color: aliceblue;
-  background-color: rgb(41, 40, 40);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
-  border: 1px solid rgb(49, 49, 49);
-  border-radius: 10px;
-  margin-left: 30%;
-  margin-right: 30%;
 }
