--- a/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
+++ b/Client/src/Componentes/PRODUCTO/MisProductos/MisProductos.module.css
@@ -1,6 +1,6 @@
 .contenedor {
   display: grid;
-  margin-left: 10rem;
+  margin-left: 4rem;
   grid-template-columns: repeat(3, fit-content(100%));
   grid-template-rows: repeat(3, fit-content(100%));
   grid-column-gap: 8px;
@@ -14,18 +14,19 @@
   align-items: center;
   border: 1px solid rgb(37, 37, 37);
   border-radius: 10px;
+  cursor: pointer;
   margin: 9px;
   width: 485px;
  
 }
-
+.cards:hover {
+  transform: scale(1.05);
+}
 .imagen {
-
-  max-width: 240px;
-  max-height: 240px;
-
-
-
+  width: 230px;
+  height: 210px;
+  border-radius: 10px;
+}
 
 .contenedorLetras {
   flex-direction: column;
@@ -55,7 +56,6 @@
   height: 50px;
   background-color: #2c2c2c;
   border-radius: 10px;
-  border: none;
 }
 
 .contenedorSelector {
@@ -67,7 +67,6 @@
   color: rgb(248, 248, 248);
   margin-left: 50px;
   margin-right: 50px;
-  gap: 25px;
 }
 
 .buttonReset {
@@ -110,39 +109,18 @@
   transform: translateY(0);
  }
  .botonEliminar{
-
-  color: white;
-  width: 90px;
-  height:40px;
-  background-color: #2c2c2c;
-  border-radius: 10px;
-  border: none;
-  border: 1px solid rgba(100, 100, 100, 0.623);
-  cursor: pointer;
- }
-
- .botonEliminar:hover{
-  color:red;
-
   background-color: transparent;
   cursor: pointer;
   font-size: 20px;
   color: rgb(192, 192, 192);
   margin-left: 180px;
  border-radius: 30px;
-
  }
  
  .PaginadoContainer {
   display: flex;
   justify-content: center;
  }
-
-
- .inputGroup {
-  padding-bottom: 150px;
- }
-
  .confirmDialog{
   position: fixed;
   top: 50%;
