--- a/Client/src/Componentes/PRODUCTO/Vender/Vender.module.css
+++ b/Client/src/Componentes/PRODUCTO/Vender/Vender.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     color: white;
     padding: 1rem;
@@ -38,7 +38,6 @@
     background-color: #181818;
     transition: 0.5s;
     border-radius: 10px;
-    border: none;
 }
 
 .BotonBack:hover {
@@ -59,21 +58,4 @@
 .BotonCarrito:hover {
     cursor: pointer;
     transform: scale(1.1);
-}
-
-::-webkit-scrollbar {
-    display: none;
-    scroll-behavior: smooth;
-}
-
-.tittle {
-    color: aliceblue;
-    background-color: rgb(41, 40, 40);
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    border-radius: 10px;
-    margin-left: 30%;
-    margin-right: 30%;
-    width: 500px;
 }
