--- a/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
+++ b/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     width: 100vw;
     height: 100vh;
+    background-color: #000000;
 }
 
 .ContenedorTitulo {
@@ -33,6 +34,7 @@
     flex-direction: column;
     word-wrap: break-word;
     overflow-y: scroll;
+    scroll-behavior: smooth;
     align-items: center;
     gap: 1rem;
 }
@@ -42,6 +44,7 @@
     width: 80%;
     padding: 10px;
     border-radius: 10px;
+    padding-bottom: 15px;
 }
 
 .ContenedorTotal {
@@ -70,4 +73,58 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+
+.ButtonSearch {
+    padding-top: 0.5rem;
+    color: white;
+    font-size: 1.3rem;
+    width: 4rem;
+    background-color: #181818;
+    transition: 0.5s;
+    border-radius: 10px;
+    border: none;
+}
+
+.ButtonSearch:hover {
+    cursor: pointer;
+    background-color: #4c4c4c;
+}
+
+.SearchCliente {
+    background-color: #181818;
+    color: white;
+    border: none;
+    height: 40px;
+    border-radius: 10px;
+    width: 150px;
+}
+
+.search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    width: 550px;
+    gap: 20px;
+}
+
+.botonEliminar {
+    font-size: 17px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 1px;
+    background-color: #181818;
+    transition: 0.5s;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    border: 1px solid rgba(100, 100, 100, 0.623)
+}
+
+.botonEliminar:hover {
+    cursor: pointer;
+    color: red;
 }
