--- a/Client/src/Componentes/Views/General/Componente_General/General.module.css
+++ b/Client/src/Componentes/Views/General/Componente_General/General.module.css
@@ -7,6 +7,7 @@
     height: 100%;
     margin: 0 auto;
     padding-left: 15px;
+    background-color: rgb(0, 0, 0);
 }
 
 .ContenedorSearchBar {
@@ -44,14 +45,17 @@
     justify-content: start;
     padding-right: 1rem;
     padding-left: 1rem;
+    
  }
 
  .ContenedorSaldos {
    margin-bottom: 1rem;
+   
  }
 
  .ContenedorComparacion {
    margin-bottom: 1rem;
+   
  }
 
  .ContenedorProductos {
