--- a/Client/src/Componentes/Views/General/Card_Producto_F_Stock/Card_Producto_F_Stock.module.css
+++ b/Client/src/Componentes/Views/General/Card_Producto_F_Stock/Card_Producto_F_Stock.module.css
@@ -6,10 +6,10 @@
   width: 91%;
   height: 10rem;
   background-color: #111111;
-  margin-bottom: 1rem;
   font-size: 1rem;
   border-radius: 10px;
   padding: 1rem;
+  margin-bottom: 1rem;
 }
 
 .ContenedorImagen {
@@ -33,6 +33,7 @@
 .Imagen {
   object-fit: contain;
   max-width: 160px;
+  max-height: 160px;
 }
 
 .p {
