--- a/Client/src/Componentes/Views/General/Productos_F_Stock/Productos_F_Stock.module.css
+++ b/Client/src/Componentes/Views/General/Productos_F_Stock/Productos_F_Stock.module.css
@@ -8,3 +8,57 @@
     height: 100%;
     color: white;
 }
+
+.ContenedorTitulo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    height: 2rem;
+    margin-bottom: 1rem;
+
+    .iconoSell {
+        font-size: 1.8rem;
+        margin-left: 0.5rem;
+    }
+}
+
+.contenedorBotonPrevio {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.botonPrevio {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-size: 1.3rem;
+    width: 2rem;
+    background-color: #ede72b;
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
+
+.contenedorBotonSiguiente {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.botonSiguiente {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-size: 1.3rem;
+    width: 2rem;
+    background-color: #ede72b;
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
