--- a/Client/src/Componentes/sideBar/sideBar.module.css
+++ b/Client/src/Componentes/sideBar/sideBar.module.css
@@ -194,3 +194,7 @@ padding-right: 15px;
   text-decoration: none;
   transition: all 200ms linear;
   }
+
+  .iconSideBarReducido:hover {
+    color: #45b545;
+    }
