--- a/Client/src/Componentes/CUENTAUSUARIO/Clientes/Clientes.module.css
+++ b/Client/src/Componentes/CUENTAUSUARIO/Clientes/Clientes.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* margin: 20px; */
   overflow: hidden;
 }
 
@@ -18,7 +17,6 @@
   background-color: #1a1a1a;
   border-radius: 0.75rem ;
   margin-left: 20px;
-  /* border: 1px solid red; */
   text-align: center;
 }
 
@@ -26,21 +24,18 @@
   font-weight: bold;
   text-align: left;
   color: #ffffff;
-  /* border: 0.3px solid rgb(230, 207, 0); */
 }
 
 .clienteInfo {
   display: flex;
   flex-direction: column;
   margin-right: 80px;
-  /* border: 0.3px solid green; */
 }
 
 .nombreCliente {
   display: flex;
   font-size: 1.2rem;
   color: white;
-  
 }
 
 .telefonoCliente,
@@ -71,7 +66,7 @@
   -webkit-user-select: none;
   touch-action: manipulation;
   will-change: transform;
-  margin-left: 1320px;
+  margin-left: 1250px;
 }
 
 .divDetalle{
@@ -79,6 +74,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .botonDetalle {
   appearance: none;
   background-color: transparent;
@@ -100,23 +96,23 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  will-change: transform;
   padding: 5px;
+  border: 1px solid rgb(49, 49, 49);
 }
+
 .botonDetalle:hover a{ 
   padding: 10px;
   color: #962faa;
-  box-shadow: rgb(63, 63, 63) 0 5px 10px;
   border-radius: 10%;
-  transform: translateY(-2px);
+
 }
+
 .CrearCliente:disabled {
   pointer-events: none;
 }
 
 .CrearCliente:hover a {
   color: #882c9b;
-  /* background-color: #1a1a1a; */
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
